# metastruct

./: Cargo.toml  README.md  lib.rs
examples/: hello_world.rs
metastruct/: Cargo.toml
metastruct/examples/: hello_world.rs
metastruct/src/: lib.rs
metastruct_macro/: Cargo.toml  LICENSE
metastruct_macro/src/: attributes.rs  exclude.rs  lib.rs  mapping.rs  num_fields.rs
metastruct_macro/tests/: bimapping.rs  exclude_from_group.rs  lifetime.rs
src/: lib.rs  mapping.rs
tests/: exclude_from_group.rs
