[package]
name = "metastruct"
version = "0.1.3"
edition = "2021"
description = "Abstractions for iterating and mapping over struct fields"
keywords = ["field", "iterator", "macro"]
categories = ["rust-patterns"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/metastruct"

[features]
default = ["macro"]
macro = ["metastruct_macro"]

[dependencies]
metastruct_macro = { version = "0.1.2", path = "../metastruct_macro", optional = true }
