[package]
name = "metastruct_macro"
version = "0.1.3"
edition = "2021"
description = "Abstractions for iterating and mapping over struct fields (proc macro crate)"
keywords = ["field", "iterator", "macro"]
categories = ["rust-patterns"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/metastruct"

[lib]
name = "metastruct_macro"
proc-macro = true

[dependencies]
darling = "0.13.0"
itertools = "0.10.1"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = "1.0.82"
smallvec = "1.8.0"
