[package]
name = "metastruct_macro"
version = "0.1.3"
edition = "2021"
description = "Abstractions for iterating and mapping over struct fields (proc macro crate)"
keywords = ["field", "iterator", "macro"]
categories = ["rust-patterns"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/metastruct"

[lib]
name = "metastruct_macro"
proc-macro = true

[dependencies]
darling = "0.23"
itertools = "0.14"
proc-macro2 = "1"
quote = "1"
syn = "2"
smallvec = "1"
